feat: tmux customize view

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,3 +34,104 @@ unbind %
 
 # Tmux-leader + / to search
 bind-key / copy-mode \; send-key ?
+
+# Set the history limit so we get lots of scrollback.
+setw -g history-limit 50000000
+
+# set -g status-interval 2
+# set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
+# set -g status-left-length 60
+
+set -g @tmux_mode_indicator_separator ":"
+set -g @tmux_mode_indicator_background "#3e4452"
+set -g @tmux_mode_indicator_normal_fg "#aab2bf"
+set -g @tmux_mode_indicator_prefix_pressed_fg "#e5c07b"
+# set -g @tmux_mode_indicator_after_interpolation_fg "#000000"
+
+# Start window and pane indices at 1.
+set -g base-index 1
+set -g pane-base-index 0
+
+# Length of tmux status line
+set -g status-left-length 30
+set -g status-right-length 150
+
+set-option -g status "on"
+
+# Default statusbar color
+set-option -g status-style bg=#282c34,fg=colour223 # bg=bg1, fg=fg1
+
+# Default window title colors
+set-window-option -g window-status-style bg=#98c379,fg=#282c34 # bg=yellow, fg=bg1
+
+# Default window with an activity alert
+set-window-option -g window-status-activity-style bg=#282c34,fg=colour248 # bg=bg1, fg=fg3
+
+# Active window title colors
+set-window-option -g window-status-current-style bg=red,fg=#282c34 # fg=bg1
+
+# Set active pane border color
+set-option -g pane-active-border-style fg=#98c379
+
+# Set inactive pane border color
+set-option -g pane-border-style fg=colour239
+
+# Message info
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+
+# Writing commands inactive
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+
+# Pane number display
+set-option -g display-panes-active-colour colour1 #fg2
+# set-option -g display-panes-colour #282c34 #bg1
+
+# Clock
+set-window-option -g clock-mode-colour colour109 #blue
+
+# Bell
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+
+
+
+set-option -g status-left "\
+#[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} ❐ #S \
+#[fg=colour241, bg=#282c34]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, 🔍,} \
+#{tmux_mode_indicator}"
+
+set-option -g status-right "\
+#{tmux_mode_indicator}\
+#[fg=#5c6370, bg=#282c34] #(tmux-mem-cpu-load --interval 2) \
+#[fg=#e06c75] ♥ #(~/dotfiles/tmux_scripts/battery.sh) \
+#[fg=colour246, bg=#282c34]  %b %d %y \
+#[fg=colour109]  %H:%M \
+#[fg=colour248, bg=colour239]"
+
+set-window-option -g window-status-current-format "\
+#[fg=#282c34, bg=#98c379]\
+#[fg=colour239, bg=#98c379] #I* \
+#[fg=colour239, bg=#98c379, bold] #W \
+#[fg=#98c379, bg=#282c34]"
+
+set-window-option -g window-status-format "\
+#[fg=#282c34,bg=colour239,noitalics]\
+#[fg=colour223,bg=colour239] #I \
+#[fg=colour223, bg=colour239] #W \
+#[fg=colour239, bg=#282c34]"
+
+set -g @tmux_mode_indicator_separator ":"
+set -g @tmux_mode_indicator_background "#282c34"
+
+# set -g @onedark_widgets "#{tmux_mode_indicator} \
+#[bg=#3e4452, fg=#e06c75] ♥ #(~/dotfiles/tmux_scripts/battery.sh)  "
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'odedlaz/tmux-status-variables'
+set -g @plugin 'dominikduda/tmux_mode_indicator'
+
+
+# iNITIALIZE tmux PLUGIN MANAGER (KEEP THIS LINE AT THE VERY BOTTOM OF TMUX.CONF)
+run -b '~/.tmux/plugins/tpm/tpm'
