feat: add keybord language in tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,6 +103,8 @@ set-option -g status-right "\
 #{tmux_mode_indicator}\
 #[fg=#5c6370, bg=#282c34] #(tmux-mem-cpu-load --interval 2) \
 #[fg=#e06c75] ♥ #(~/dotfiles/tmux_scripts/battery.sh) \
+#[fg=colour246]  \
+#[fg=#56b6c2] #(~/dotfiles/tmux_scripts/keyboard.sh) \
 #[fg=colour246, bg=#282c34]  %b %d %y \
 #[fg=colour109]  %H:%M \
 #[fg=colour248, bg=colour239]"
