feat(.tmux.conf): add tmux-open and hotkey open config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,8 @@ bind r \
     source-file ~/.tmux.conf \;\
     display 'Reloaded tmux config'
 
+bind-key M split-window -h "nvim ~/.tmux.conf"
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -134,6 +136,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'odedlaz/tmux-status-variables'
 set -g @plugin 'dominikduda/tmux_mode_indicator'
 
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # iNITIALIZE tmux PLUGIN MANAGER (KEEP THIS LINE AT THE VERY BOTTOM OF TMUX.CONF)
 run -b '~/.tmux/plugins/tpm/tpm'
