feat(.tmux.conf): add kyebindings for use mouse

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,8 @@ bind r \
     source-file ~/.tmux.conf \;\
     display 'Reloaded tmux config'
 
-bind-key M split-window -h "nvim ~/.tmux.conf"
+bind-key m set -g mouse on
+bind-key M set -g mouse off
 
 # split panes using | and -
 bind | split-window -h
