feat: add integration cht.sh with tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,7 @@ setw -g history-limit 50000000
 # set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
 # set -g status-left-length 60
 
+bind-key -r i run-shell "tmux neww ~/dotfiles/scripts/cht.sh"
 set -g @tmux_mode_indicator_separator ":"
 set -g @tmux_mode_indicator_background "#3e4452"
 set -g @tmux_mode_indicator_normal_fg "#aab2bf"
