feat: add some fixes configs
Changes to be committed:
    modified:   .alacritty.yml
    modified:   .gitignore
    modified:   .ideavimrc
    modified:   .tmux.conf
    modified:   .vimrc
    modified:   .zshrc
    new file:   UltiSnips/go.snippets
    new file:   UltiSnips/markdown.snippets
    new file:   alfred/Alfred.Workflow.Todoist.alfredworkflow
    new file:   alfred/Firefox-Assistant-0.2.2.alfredworkflow
    new file:   alfred/Translate.alfredworkflow
    new file:   alfred/alfred-json.alfredworkflow
    new file:   alfred/force_quit.alfredworkflow
    new file:   alfred/github.alfredworkflow
    modified:   doc/cl.md
    modified:   doc/terminal.md
    deleted:    karabiner/custom-esc.json
    new file:   karabiner/microsoft-sculpt-remap.json
    new file:   karabiner/moons-keymap.json
    modified:   nvim/.config/nvim/lua/moonw1nd/lsp/efm.lua
    modified:   nvim/.config/nvim/lua/moonw1nd/plugins.lua
    modified:   nvim/.config/nvim/lua/moonw1nd/sumneko_lua.lua
    modified:   nvim/.config/nvim/lua/moonw1nd/telescope.lua
    modified:   nvim/.config/nvim/plugin/aliases.vim
    modified:   nvim/.config/nvim/plugin/dirvish.vim
    new file:   nvim/.config/nvim/plugin/navigation.vim
    new file:   scripts/createPRwithDescription.sh
    modified:   scripts/minimalVimrc.sh
    new file:   scripts/setup/cli_and_programm.sh
    new file:   scripts/setup/macOs.sh
    new file:   scripts/setup/vim.sh
    new file:   scripts/tmxw.sh
    modified:   skhdrc
    new file:   vifm/colors/moonw1nd.vifm
    new file:   vifm/vifm_devicons
    new file:   vifm/vifmrc

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -2,6 +2,7 @@ set visualbell
 set noerrorbells
 let mapleader = " "
 
+set number                                      " current line is 0
 set relativenumber                                      " current line is 0
 
 " Remap navigation commands to center view on cursor using zz
