--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+unbind-key C-k
+
 # solve color issues with work vim
 set -g default-terminal 'screen-256color'
 set -ga terminal-overrides ',*256col*:Tc'
@@ -10,9 +12,9 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Set the prefix to `ctrl + a` instead of `ctrl + b`
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# unbind C-b
+# set-option -g prefix C-a
+# bind-key C-a send-prefix
 
 # Change Tmux pane in vim style
 bind h select-pane -L
