feat: complex update dotfiles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,7 @@ setw -g history-limit 50000000
 # set -g status-left-length 60
 
 bind-key -r i run-shell "tmux neww ~/dotfiles/scripts/cht.sh"
+bind-key -r m run-shell "tmux neww cmatrix"
 set -g @tmux_mode_indicator_separator ":"
 set -g @tmux_mode_indicator_background "#3e4452"
 set -g @tmux_mode_indicator_normal_fg "#aab2bf"
