--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ bind-key / copy-mode \; send-key ?
 # Set the history limit so we get lots of scrollback.
 setw -g history-limit 50000000
 
-# set -g status-interval 2
+set -g status-interval 10
 # set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
 # set -g status-left-length 60
 
