feat: configure vim ls and yaml ls

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -140,5 +140,5 @@ set -g @plugin 'dominikduda/tmux_mode_indicator'
 
 set -g @plugin 'tmux-plugins/tmux-open'
 
-# iNITIALIZE tmux PLUGIN MANAGER (KEEP THIS LINE AT THE VERY BOTTOM OF TMUX.CONF)
+# INITIALIZE tmux PLUGIN MANAGER (KEEP THIS LINE AT THE VERY BOTTOM OF TMUX.CONF)
 run -b '~/.tmux/plugins/tpm/tpm'
