feat: some fixes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,6 +116,16 @@ set-option -g status-right "\
 #[fg=colour109]  %H:%M \
 #[fg=colour248, bg=colour239]"
 
+# For presentation status bar
+set-option -g status-right "\
+#{tmux_mode_indicator}\
+#[fg=#e06c75, bg=#282c34] ♥ #(~/dotfiles/scripts/tmux/battery.sh) \
+#[fg=colour246]  \
+#[fg=#56b6c2] #(~/dotfiles/scripts/tmux/keyboard.sh) \
+#[fg=colour246]  %b %d %y \
+#[fg=colour109]  %H:%M \
+#[fg=colour248, bg=colour239]"
+
 set-window-option -g window-status-current-format "\
 #[fg=#282c34, bg=#98c379]\
 #[fg=colour239, bg=#98c379] #I* \
@@ -140,5 +150,5 @@ set -g @plugin 'dominikduda/tmux_mode_indicator'
 
 set -g @plugin 'tmux-plugins/tmux-open'
 
-# INITIALIZE tmux PLUGIN MANAGER (KEEP THIS LINE AT THE VERY BOTTOM OF TMUX.CONF)
+# iNITIALIZE tmux PLUGIN MANAGER (KEEP THIS LINE AT THE VERY BOTTOM OF TMUX.CONF)
 run -b '~/.tmux/plugins/tpm/tpm'
